--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;500&display=swap');
-    </style>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 
@@ -21,13 +20,13 @@
     </div>
 
     <header class="header">
-        <a class="logo" href="">
-            <img src="imagens/logo-chapeu-mario.png" alt="logo chapéu Mario">
+        <a href="">
+            <img class="logo" src="imagens/logo-chapeu-mario.png" alt="logo chapéu Mario">
         </a>
         <nav>
             <ul class="menu">
-                <li>Home</li>
-                <li>Detalhes</li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Detalhes</a></li>
             </ul>
         </nav>
     </header>
